--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>vai ser uma imagem aqui</h1>
+  <header class="cabecalho">
+
+<img class="cabecalho-imagem" src="Rectangle 5.png" alt="">
+
+  </header>
+</body>
 
     
-</body>
+
 </html>
